# educational-video-generation

./: .gitignore  PRD_Educational Video Generation.md  README.md  VIDEO_TIPS.md  main.py  plan.md  pyproject.toml  streamlit_app.py
configs/: defaults.yaml  style.json
examples/: newtons_laws.lesson.json
outputs/: physics-explain-newtons-first-law.lesson.json
outputs/physics-newtons-first-law/audio/: manifest.json
outputs/physics-newtons-first-law/preview/: README.txt
src/educational_video_generation/: __init__.py  cli.py
src/educational_video_generation/audio/: __init__.py  tts.py
src/educational_video_generation/config/: __init__.py  loader.py
src/educational_video_generation/prompting/: __init__.py  generator.py  service.py  stub.py
src/educational_video_generation/render/: __init__.py  renderer.py
src/educational_video_generation/specs/: __init__.py  models.py
src/educational_video_generation/timeline/: __init__.py  scheduler.py
src/educational_video_generation/ui/: __init__.py  app.py
